# star-river-backend

./: .env  .gitignore  AGENTS.md  Cargo.toml  README_CN.md  readme.md  rustfmt.toml
backend/: Cargo.toml
backend/src/: main.rs  server.rs
backtest-engine/: Cargo.toml
backtest-engine/src/: backtest_engine_error.rs  context.rs  engine_error.rs  engine_lifecycle.rs  engine_state_machine.rs  error.rs  lib.rs  node.rs  node_catalog.rs  node_command.rs  node_list.rs  node_list_new.rs  node_new.rs  state_machine.rs  strategy.rs  strategy_command.rs  strategy_new.rs  strategy_stats copy.rs  strategy_stats.rs  virtual_trading_system.rs
backtest-engine/src/context/: event_handler.rs  strategy_control.rs  strategy_manager.rs
backtest-engine/src/error/: node_error.rs  node_state_machine_error.rs  strategy_error.rs
backtest-engine/src/node/: base_context.rs  node_command.rs  node_context_trait.rs  node_error.rs  node_event.rs  node_handles.rs  node_message.rs  node_state_machine.rs  node_trait.rs  node_utils.rs
backtest-engine/src/node_catalog/: futures_order_node.rs  if_else_node.rs  indicator_node.rs  kline_node.rs  position_node.rs  start_node.rs  variable_node.rs
backtest-engine/src/node_list/: kline_node.rs  start_node.rs
backtest-engine/src/node_list_new/: kline_node.rs  node_message.rs  node_state_machine.rs  node_utils.rs  start_node.rs
backtest-engine/src/strategy/: lifecycle.rs  signal_generator.rs  state_handler.rs  strategy_command.rs  strategy_config.rs  strategy_context.rs  strategy_error.rs  strategy_evt_listener.rs  strategy_lifecycle.rs  strategy_log_message.rs  strategy_state_machine.rs  strategy_utils.rs
backtest-engine/src/strategy_new/: config.rs  strategy_context.rs  strategy_lifecycle.rs  strategy_log_message.rs  strategy_state_machine.rs
backtest-engine/src/strategy_stats/: context.rs  event_listener.rs
core/event-center-core/: Cargo.toml
core/event-center-core/src/: error.rs  event.rs  lib.rs
core/key/: Cargo.toml
core/key/src/: error.rs  key.rs  lib.rs
core/migration/: Cargo.toml  README.md
core/migration/src/: lib.rs  m20240101_000001_create_strategy_config_table.rs  m20240101_000002_create_order_table.rs  m20240101_000003_create_position_table.rs  m20240101_000004_create_transaction_table.rs  m20240101_000005_create_account_config_table.rs  m20240101_000006_create_mt5_account_config_table.rs  m20240101_000007_create_mt5_account_info_table.rs  m20240101_000008_create_account_info_table.rs  m20240101_000009_create_strategy_statistics_table.rs  m20240101_000010_create_strategy_sys_variable_table.rs  m20250525_063811_add_test1_to_strateyg_config.rs  m20250610_024732_create_system_config_table.rs  m20250610_030125_insert_system_config_init_data.rs  m20250907_101341_change_strategy_config_table_status_field.rs  m20251117_063612_strategy_config_delete_config_field.rs  (+2 more)
core/star-river-core/: Cargo.toml
core/strategy-core/: Cargo.toml
data-cache/: Cargo.toml
data-cache/src/: indicator_cache_manager.rs  kline_cache_manager.rs  lib.rs
database/: Cargo.toml
database/db/: db.sqlite
database/src/: error.rs  lib.rs  main.rs  page.rs
engine/: Cargo.toml  build.rs
engine-core/: Cargo.toml
engine-core/src/: context.rs  context_trait.rs  engine.rs  engine_trait.rs  lib.rs  state_machine.rs  state_machine_error.rs
engine/src/: backtest_engine.rs  engine_manager.rs  lib.rs  strategy_engine.rs
event-center/: Cargo.toml
event-center-new/: Cargo.toml
event-center-new/src/: singleton.rs
event-center/src/: account_event.rs  command.rs  command_event.rs  communication.rs  error.rs  event.rs  event_center_error.rs  exchange_event.rs  indicator_event.rs  lib.rs  market_event.rs  order_event.rs  position_event.rs  response.rs  response_event.rs  singleton.rs  strategy_event.rs
exchange-client/: Cargo.toml  MetaTrader5-x86_64-pc-windows-msvc.spec  build.rs
exchange-client-new/: Cargo.toml
exchange-client-new/src/: binance.rs  exchange_error.rs  metatrader5.rs
exchange-client/src/: binance.rs  data_processor_error.rs  exchange_client_error.rs  exchange_error.rs  exchange_trait.rs  lib.rs  metatrader5.rs  utils.rs
exchange-core/: Cargo.toml
exchange-core/src/: error.rs  exchange.rs  exchange_trait.rs  lib.rs  state_machine.rs
exchange-engine/: Cargo.toml
exchange-engine/src/: context.rs  error.rs  exchanges.rs  lib.rs  lifecycle.rs  state_machine.rs
indicator-engine/: Cargo.toml
indicator-engine/src/: calculate.rs  context.rs  error.rs  indicator_engine_type.rs  lib.rs  lifecycle.rs  state_machine.rs  talib.rs
key/: Cargo.toml
key/src/: error.rs  key.rs  lib.rs
market-engine/: Cargo.toml
market-engine/src/: context.rs  error.rs  lib.rs  lifecycle.rs  state_machine.rs  subkey.rs
order-engine/: Cargo.toml
order-engine/src/: lib.rs
star-river/: Cargo.toml
star-river-api/: Cargo.toml
star-river-api/src/: engine_manager.rs  error.rs  lib.rs  star_river.rs  websocket.rs
star-river-core/: Cargo.toml
star-river-core/src/: core_error.rs  custom_type.rs  engine.rs  error.rs  exchange.rs  instrument.rs  kline.rs  lib.rs  time.rs  utils.rs
star-river-event/: Cargo.toml
star-river-event/src/: backtest_strategy.rs  communication.rs  event.rs  lib.rs
star-river/src/: engine_manager.rs  lib.rs  market_engine.rs  sse.rs  star_river.rs  websocket.rs
strategy-engine/: Cargo.toml
strategy-engine/src/: engine.rs  lib.rs  message.rs  strategy.rs
strategy-stats/: Cargo.toml  strategy_stats.md
strategy-stats/src/: backtest_strategy_stats.rs  event.rs  lib.rs  snapshot.rs  strategy_stats.rs
types/: Cargo.toml
types/src/: account.rs  cache.rs  custom_type.rs  engine.rs  error.rs  indicator.rs  indicator_config.rs  lib.rs  market.rs  new_cache.rs  order.rs  position.rs  transaction.rs  transaction_detail.rs
virtual-trading/: Cargo.toml
virtual-trading/src/: command.rs  error.rs  event.rs  key.rs  lib.rs  order.rs  position.rs  statistics.rs  transaction.rs  types.rs  utils.rs
virtual-trading/test/: comprehensive_test.rs  mod.rs  order_calculation_test.rs  position_calculation_test.rs
(+1533 files in other folders)
