[workspace]
resolver = "3"
members = [ 
    "examples/*",
    "star-river",
    "database",
    "event-center",
    "exchange-client",
    "heartbeat",
    "migration",
    "star-river-core",
    "engine", 
    "virtual-trading", 
    "entity", "strategy-stats"]

[workspace.lints]
rust.unused_must_use = "warn"

[workspace.package]
version = "0.1.0"
description = "Star River Backend Workspace"
authors = ["Jabori"]
edition = "2024"


[features]
default = ["paid"]
paid = ["star-river/paid"]




[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros", "ws", "query","json"] }
axum-extra = {version = "0.10.1", features = ["typed-header"]}
headers = "0.4.0"
tokio-stream = {version = "0.1.17", features = ["sync"]}
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = {version = "0.7.14"}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "fmt", "std", "time"]}
tracing-appender = {version = "0.2.3"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.143", features=["std"]}
tower-http = { version = "0.6.6", features = ["cors","fs", "trace"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features= ["serde"]}
time = {version="0.3.41", features= ["local-offset"]}
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
futures = "0.3.31"
tokio-tungstenite = { version = "0.28.0",features = ["native-tls"] }
zip = "5.0.0"
sysinfo = {version="0.37.0", features = [] }
async-trait = {version = "0.1.89"}
# 数据库
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite","runtime-tokio", "macros", "chrono","with-chrono","with-json","serde_json" ] }
reqwest = { version = "0.12.12", features = ["json"] }
futures-util = "0.3.31"
rand = "0.9.2"
async-stream = "0.3.6"
utoipa = {version = "5.4.0", features=["axum_extras","chrono"]}
ordered-float = {version = "5.0.0", features=["serde"]}
snafu = {version = "0.8.9", features=["backtrace"]}
deepsize = { version = "0.2.0", features=["chrono"]}


[package]
name = "star-river-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
star-river = {path = "star-river"}
tokio.workspace = true




[profile.release]
opt-level = 'z'     # 优化大小
lto = true          # 启用链接时优化
codegen-units = 1   # 降低并行编译等级以提高优化
strip = true        # 自动剥离符号信息







