[workspace]
resolver = "3"
members = [
    "examples/*",
    "backend",
    "star-river-api",
    "database",
    "event-center",
    "heartbeat",
    "migration",
    "star-river-core",
    "virtual-trading",
    "entity", 
    "strategy-stats", 
    "engine-core",
    "exchange-engine",
    "market-engine",
    "indicator-engine",
    "backtest-engine", 
    "exchange-core", 
    "exchange-client-new", 
    "ta-lib",
    ]
default-members = ["backend"]

[workspace.lints]
rust.unused_must_use = "warn"

[workspace.package]
version = "0.1.0"
description = "Star River Backend Workspace"
authors = ["Jabori"]
edition = "2024"




[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros", "ws", "query","json"] }
axum-extra = {version = "0.12.0", features = ["typed-header"]}
headers = "0.4.0"
tokio-stream = {version = "0.1.17", features = ["sync"]}
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = {version = "0.7.16"}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "fmt", "std", "time"]}
tracing-appender = {version = "0.2.3"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.143", features=["std"]}
tower-http = { version = "0.6.6", features = ["cors","fs", "trace"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features= ["serde"]}
time = {version="0.3.41", features= ["local-offset"]}
strum = {version = "0.27.2", features = ["derive"]}
strum_macros = "0.27.2"
futures = "0.3.31"
tokio-tungstenite = { version = "0.28.0",features = ["native-tls"] }
zip = "6.0.0"
sysinfo = {version="0.37.0", features = [] }
async-trait = {version = "0.1.89"}
# 数据库
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite","runtime-tokio", "macros", "chrono","with-chrono","with-json","serde_json" ] }
reqwest = { version = "0.12.24", features = ["json"] }
futures-util = "0.3.31"
rand = "0.9.2"
async-stream = "0.3.6"
utoipa = {version = "5.4.0", features=["axum_extras","chrono", "decimal"]}
ordered-float = {version = "5.1.0", features=["serde"]}
snafu = {version = "0.8.9", features=["backtrace"]}
deepsize = { version = "0.2.0", features=["chrono"]}
rust_decimal = { version = "1.39.0", features = ["serde-float"] }
petgraph = { version = "0.8.3" }
once_cell = "1.21.3"
thiserror = "2.0.11"
paste = "1.0.15"
enum_dispatch = "0.3.13"




[profile.release]
opt-level = 'z'     # 优化大小
lto = true          # 启用链接时优化
codegen-units = 1   # 降低并行编译等级以提高优化
strip = true        # 自动剥离符号信息
