[package]
name = "data-cache"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
event-center = { path = "../event-center" }
types = { path = "../types" }
utils = { path = "../utils" }
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true