


[package]
name = "database"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sqlx = {version = "0.8.3", features = ["runtime-tokio", "sqlite"]}
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sea-orm.workspace = true
chrono.workspace = true
migration = { path = "../migration" }
entity = { path = "../entity" }
sea-orm-migration = {version="1.1.14", features = ["sqlx-sqlite","runtime-tokio"]}
star-river-core = { path = "../star-river-core" }
strategy-core = { path = "../strategy-core" }
log = "0.4.26"
