


[package]
name = "database"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite"]}
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sea-orm.workspace = true
chrono.workspace = true
migration = { path = "../migration" }
entity = { path = "../entity" }
sea-orm-migration.workspace = true
star-river-core = { path = "../star-river-core" }
strategy-core = { path = "../strategy-core" }
log.workspace = true
snafu.workspace = true
utoipa.workspace = true