[package]
name = "engine"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
types = {path = "../types"}
utils = { path = "../utils" }
event-center = {path = "../event-center"}
exchange-client = {path = "../exchange-client"}
database = { path = "../database" }
heartbeat = { path = "../heartbeat" }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
typetag = {version = "0.2.20"}
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures.workspace = true
sea-orm.workspace = true
petgraph = { version = "0.8.1" }
tokio-util.workspace = true
windows = { version = "0.61.1", features = ["Win32_System_Console","Win32_System_Threading"] }
rust-embed = "8.7.2"
tempfile = "3.19.1"
chrono.workspace=true
deepsize = "0.2.0"
thiserror.workspace = true
virtual-trading = { path = "../virtual-trading"}


[build-dependencies]
cc = "1.2"
bindgen = "0.71.1"
