[package]
name = "event-center"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
star-river-core = { path = "../star-river-core" }
derive_more = { version = "2.0.1", features = ["from"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
sea-orm.workspace = true
snafu.workspace = true
utoipa.workspace = true
