[package]
name = "event-center"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
star-river-core = { path = "../core/star-river-core" }
event-center-core = { path = "../core/event-center-core" }
star-river-event = { path = "../star-river-event" }
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
derive_more.workspace = true
snafu.workspace = true

[lints]
workspace = true
