[package]
name = "exchange-client-new"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
exchange-core = { path = "../exchange-core" }
star-river-core = { path = "../star-river-core" }
chrono.workspace = true
event-center = {path = "../event-center"}
snafu.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true

[lints]
workspace = true
