[package]
name = "exchange-client"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
types = {path = "../types"}
event-center = {path = "../event-center"}
utils = {path = "../utils"}

strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-embed = "8.7.2"
tempfile = "3.19.1"
once_cell = "1.21.3"
windows = { version = "0.61.1", features = ["Win32_System_Console","Win32_System_Threading"] }
thiserror.workspace = true