[package]
name = "exchange-client"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
exchange-core = { path = "../exchange-core" }
star-river-core = { path = "../star-river-core" }
event-center = { path = "../event-center" }
star-river-event = { path = "../star-river-event" }
strategy-core = { path = "../strategy-core" }
chrono.workspace = true
snafu.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true

[lints]
workspace = true
