[package]
name = "order-engine"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
exchange-client = { path = "../exchange-client" }
event-center = { path = "../event-center" }
types = { path = "../types" }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true