[package]
name = "star-river-core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[features]
paid = []

[dependencies]
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
typetag = {version = "0.2.20"}
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
deepsize.workspace = true
utoipa.workspace = true
ordered-float.workspace = true
rust_decimal.workspace = true
paste = "1.0.15"
reqwest.workspace = true
tokio-tungstenite.workspace = true
sea-orm.workspace = true
snafu.workspace = true
entity = { path = "../entity"}