[package]
name = "star-river"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
headers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
futures-util.workspace = true
futures.workspace = true
sea-orm.workspace = true
chrono.workspace = true
heartbeat = { path = "../heartbeat" }
exchange-client = { path = "../exchange-client" }
data-cache = { path = "../data-cache" }
indicator-engine = { path = "../indicator-engine" }
order-engine = { path = "../order-engine" }
types = { path = "../types" }
utils = { path = "../utils" }
event-center = {path = "../event-center"}
database = { path = "../database" }
migration = { path = "../migration" }
market-engine = { path = "../market-engine" }
strategy-engine = { path = "../strategy-engine" }

