[package]
name = "star-river"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
headers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
futures-util.workspace = true
futures.workspace = true
sea-orm.workspace = true
chrono.workspace = true
time.workspace = true
heartbeat = { path = "../heartbeat" }
exchange-client = { path = "../exchange-client" }
star-river-core = { path = "../star-river-core" }
utils = { path = "../utils" }
event-center = {path = "../event-center"}
database = { path = "../database" }
migration = { path = "../migration" }
engine = { path = "../engine" }
async-stream.workspace = true
utoipa.workspace = true
utoipa-scalar = {version="0.3", features=["axum"]}
strum.workspace = true
snafu.workspace = true

