[package]
name = "strategy-engine"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
types = {path = "../types"}
utils = {path = "../utils"}
event-center = {path = "../event-center"}
database = {path = "../database"}
market-engine = {path = "../market-engine"}
data-cache = {path = "../data-cache"}
indicator-engine = {path = "../indicator-engine"}
exchange-client = {path = "../exchange-client"}
# 数据库
sea-orm.workspace = true
petgraph = "0.7.1"
tokio.workspace = true
tokio-util.workspace = true
rand = "0.9.0"
futures.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
async-trait.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
strum = "0.27.1"
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
