[package]
name = "strategy-stats"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
star-river-core = { path = "../core/star-river-core" }
virtual-trading = { path = "../core/virtual-trading"}
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
utoipa.workspace = true