[package]
name = "types"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
typetag = {version = "0.2.20"}
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures.workspace = true
chrono.workspace = true
petgraph = "0.8.1"
deepsize = "0.2.0"
utoipa.workspace = true
ordered-float = {version = "5.0.0", features=["serde"]}